@@ -48,7 +48,6 @@ class TestParent(TestCaseWithTransport):
         self.assertEqual(None, b.get_parent())
 
         b.set_parent('../other_branch')
-        cwd = getcwd()
 
         self.assertEqual(local_path_to_url('../other_branch'), b.get_parent())
         path = local_path_to_url('../yanb')
@@ -60,7 +59,7 @@ class TestParent(TestCaseWithTransport):
 
         self.assertRaises(bzrlib.errors.InvalidURL, b.set_parent, u'\xb5')
         b.set_parent(escape(u'\xb5'))
-        self.assertEqual('%C2%B5', 
+        self.assertEqual('%C2%B5',
             b.control_files.get('parent').read().strip('\n'))
 
         self.assertEqual(b.base + '%C2%B5', b.get_parent())
@@ -73,4 +72,18 @@ class TestParent(TestCaseWithTransport):
         else:
             b.control_files.put('parent', cStringIO.StringIO('/local/abs/path'))
             self.assertEqual('file:///local/abs/path', b.get_parent())
+
+    def test_get_invalid_parent(self):
+        b = self.make_branch('.')
+
+        cwd = getcwd()
+        n_dirs = len(cwd.split('/'))
+
+        # Force the relative path to be something invalid
+        # This should attempt to go outside the filesystem
+        path = ('../'*(n_dirs+5)) + 'foo'
+        b.control_files.put('parent', cStringIO.StringIO(path))
+
+        # With an invalid branch parent, just return None
+        self.assertEqual(None, b.get_parent())
 
